--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center>
-    <h2>Rédacteur de note de service</h2>
+    <h2>Rédacteur de Note de service</h2>
     <form action="/generate" method="post">
       <h3 for="article_text"></h3>
       <textarea required="required" placeholder="Faites un résumée de la note de service, nous l'approfondirons et la rédigeront avec soin :" rows="30" name="article_text" id="article_text" cols="60" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
