--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <h2>Rédacteur de Note de service</h2>
     <form action="/generate" method="post">
       <h3 for="article_text"></h3>
-      <textarea style="resize: none;" required="required" placeholder="Faites un résumée de la note de service, nous l'approfondirons et la rédigeront avec soin :" rows="30" name="article_text" id="article_text" cols="60" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
+      <textarea style="resize: none;" required="required" placeholder="Faites un résumé de la note de service, nous l'approfondirons et la rédigeront avec soin :" rows="30" name="article_text" id="article_text" cols="60" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
       <br><br><br>
       <button type="submit">Générer la note</button>
       <script>let btn = document.querySelector("button");
